--- a/src/assets/i18n/ka.json
+++ b/src/assets/i18n/ka.json
@@ -1,49 +1,50 @@
 {
-  "HELLO": "ಹಲೋ",
-  "WELCOME": "ಸ್ವಾಗತ",
-  "HOME": "ಮನೆ",
-  "sugarcane": "ಕಬ್ಬು",
-  "LANGUAGE": "ಭಾಷೆ",
-  "FARMER_USE": "ಕೃಷಿಕ ಬಳಕೆ",
-  "REGISTER_LAND_DETAILS": "ನಿಮ್ಮ ಭೂಮಿಯ ವಿವರಗಳನ್ನು ನೋಂದಾಯಿಸಿ",
-  "FACTORY_USE": "ಕಾರ್ಖಾನೆ ಬಳಕೆ",
-  "CHECK_REGISTERED_FARMERS": "ನೋಂದಾಯಿತ ರೈತರನ್ನು ಮತ್ತು ಲಭ್ಯವಿರುವ ಕಾರ್ಖಾನೆಗಳನ್ನು ಪರಿಶೀಲಿಸಿ",
-  "CLICK_HERE": "ಇಲ್ಲಿ ಕ್ಲಿಕ್ ಮಾಡಿ",
-  "LOGIN": "ಲಾಗಿನ್",
-  "USER_ID": "ಬಳಕೆದಾರ ಐಡಿ",
-  "PASSWORD": "ಗುಪ್ತಪದ",
-  "LAND_NUMBER": "ಜಮೀನಿನ ಸಂಖ್ಯೆ",
-  "LAND_NUMBER_ERROR": "ದಯವಿಟ್ಟು ಮಾನ್ಯವಾದ ಜಮೀನಿನ ಸಂಖ್ಯೆಯನ್ನು ನಮೂದಿಸಿ.",
-  "NAME": "ಹೆಸರು",
-  "NAME_ERROR": "ಹೆಸರು ಅಗತ್ಯವಿದೆ.",
-  "CULTIVATION_DATE": "ಬೆಳೆ ಬೆಳೆಸಿದ ದಿನಾಂಕ",
-  "CULTIVATION_DATE_ERROR": "ದಯವಿಟ್ಟು ಮಾನ್ಯವಾದ ಬೆಳೆ ದಿನಾಂಕವನ್ನು ನಮೂದಿಸಿ.",
-  "CULTIVATION_ACRE": "ಬೆಳೆ ಬೆಳೆದ ಎಕರೆ",
-  "CULTIVATION_ACRE_ERROR": "ದಯವಿಟ್ಟು ಮಾನ್ಯವಾದ ಎಕರೆ ಸಂಖ್ಯೆಯನ್ನು ನಮೂದಿಸಿ.",
-  "YIELD_DURATION": "ಅಂದಾಜು ಉತ್ಪಾದನಾ ಅವಧಿ",
-  "YIELD_DURATION_ERROR": "ದಯವಿಟ್ಟು ಮಾನ್ಯವಾದ ಉತ್ಪಾದನಾ ಅವಧಿಯನ್ನು ನಮೂದಿಸಿ.",
-  "HARVESTING_READINESS": "ಕಟಾವುಗೆ ಸಿದ್ಧತೆ ದಿನಾಂಕ",
-  "HARVESTING_READINESS_ERROR": "ದಯವಿಟ್ಟು ಮಾನ್ಯವಾದ ಕಟಾವು ದಿನಾಂಕವನ್ನು ನಮೂದಿಸಿ.",
-  "AGREE_TERMS": "ನಿಯಮಗಳು ಮತ್ತು ಷರತ್ತುಗಳಿಗೆ ಒಪ್ಪಿಕೊಳ್ಳಿ",
-  "AGREE_TERMS_ERROR": "ಸಲ್ಲಿಸುವ ಮೊದಲು ನೀವು ಒಪ್ಪಿಕೊಳ್ಳಬೇಕು.",
-  "SUBMIT_FORM": "ಫಾರ್ಮ್ ಸಲ್ಲಿಸಿ",
-  "SUCCESS": {
-    "TITLE": "ನಿಮ್ಮ ಭೂಮಿ ಯಶಸ್ವಿಯಾಗಿ ನೋಂದಾಯಿಸಲಾಗಿದೆ",
-    "MESSAGE": "ನಿಮ್ಮ ಭೂಮಿ ಯಶಸ್ವಿಯಾಗಿ ನೋಂದಾಯಿಸಲಾಗಿದೆ. ನಮ್ಮ ಸೇವೆಯನ್ನು ಬಳಸಿದಕ್ಕಾಗಿ ಧನ್ಯವಾದಗಳು!",
-    "BUTTON": "ಮುಖಪುಟಕ್ಕೆ ಹೋಗಿ"
-  },
-  "FACTORY": {
-    "TITLE": "ಕಾರ್ಖಾನೆ",
-    "CAPACITY": "ದಿನಕ್ಕೆ ಕ್ರಷಿಂಗ್ ಸಾಮರ್ಥ್ಯ",
-    "UNIT": "ಟನ್‌ಗಳು",
-    "STATUS": "ಚಾಲನೆಯ ಸ್ಥಿತಿ",
-    "BUTTON": "ವಿವರಗಳು",
-    "SHUTDOWN": "ನಿಲ್ಲಿಸಲಾಗಿದೆ",
-    "ACTIVE": "ಸಕ್ರಿಯ",
-    "NAME1": "ಶ್ರೀ ಚಾಮುಂಡೇಶ್ವರಿ ಶುಗರ್ಸ್ ಲಿಮಿಟೆಡ್, ಕೆಎಂ ದೊಡ್ಡಿ, ಮಂಡ್ಯ, ಕರ್ನಾಟಕ",
-    "NAME2": "ಪಾಂಡವಪುರ ಸಹಕಾರ ಸಕ್ಕರೆ ಕಾರ್ಖಾನೆ ಲಿಮಿಟೆಡ್ (PSSK), ಪಾಂಡವಪುರ, ಮಂಡ್ಯ, ಕರ್ನಾಟಕ",
-    "NAME3": "ಮೈಸೂರು ಶುಗರ್ ಕಂಪನಿ ಲಿಮಿಟೆಡ್, ಮಂಡ್ಯ, ಕರ್ನಾಟಕ"
-  },
+  "ka": {
+    "HELLO": "ಹಲೋ",
+    "WELCOME": "ಸ್ವಾಗತ",
+    "HOME": "ಮನೆ",
+    "sugarcane": "ಕಬ್ಬು",
+    "LANGUAGE": "ಭಾಷೆ",
+    "FARMER_USE": "ಕೃಷಿಕ ಬಳಕೆ",
+    "REGISTER_LAND_DETAILS": "ನಿಮ್ಮ ಭೂಮಿಯ ವಿವರಗಳನ್ನು ನೋಂದಾಯಿಸಿ",
+    "FACTORY_USE": "ಕಾರ್ಖಾನೆ ಬಳಕೆ",
+    "CHECK_REGISTERED_FARMERS": "ನೋಂದಾಯಿತ ರೈತರನ್ನು ಮತ್ತು ಲಭ್ಯವಿರುವ ಕಾರ್ಖಾನೆಗಳನ್ನು ಪರಿಶೀಲಿಸಿ",
+    "CLICK_HERE": "ಇಲ್ಲಿ ಕ್ಲಿಕ್ ಮಾಡಿ",
+    "LOGIN": "ಲಾಗಿನ್",
+    "USER_ID": "ಬಳಕೆದಾರ ಐಡಿ",
+    "PASSWORD": "ಗುಪ್ತಪದ",
+    "LAND_NUMBER": "ಜಮೀನಿನ ಸಂಖ್ಯೆ",
+    "LAND_NUMBER_ERROR": "ದಯವಿಟ್ಟು ಮಾನ್ಯವಾದ ಜಮೀನಿನ ಸಂಖ್ಯೆಯನ್ನು ನಮೂದಿಸಿ.",
+    "NAME": "ಹೆಸರು",
+    "NAME_ERROR": "ಹೆಸರು ಅಗತ್ಯವಿದೆ.",
+    "CULTIVATION_DATE": "ಬೆಳೆ ಬೆಳೆಸಿದ ದಿನಾಂಕ",
+    "CULTIVATION_DATE_ERROR": "ದಯವಿಟ್ಟು ಮಾನ್ಯವಾದ ಬೆಳೆ ದಿನಾಂಕವನ್ನು ನಮೂದಿಸಿ.",
+    "CULTIVATION_ACRE": "ಬೆಳೆ ಬೆಳೆದ ಎಕರೆ",
+    "CULTIVATION_ACRE_ERROR": "ದಯವಿಟ್ಟು ಮಾನ್ಯವಾದ ಎಕರೆ ಸಂಖ್ಯೆಯನ್ನು ನಮೂದಿಸಿ.",
+    "YIELD_DURATION": "ಅಂದಾಜು ಉತ್ಪಾದನಾ ಅವಧಿ",
+    "YIELD_DURATION_ERROR": "ದಯವಿಟ್ಟು ಮಾನ್ಯವಾದ ಉತ್ಪಾದನಾ ಅವಧಿಯನ್ನು ನಮೂದಿಸಿ.",
+    "HARVESTING_READINESS": "ಕಟಾವುಗೆ ಸಿದ್ಧತೆ ದಿನಾಂಕ",
+    "HARVESTING_READINESS_ERROR": "ದಯವಿಟ್ಟು ಮಾನ್ಯವಾದ ಕಟಾವು ದಿನಾಂಕವನ್ನು ನಮೂದಿಸಿ.",
+    "AGREE_TERMS": "ನಿಯಮಗಳು ಮತ್ತು ಷರತ್ತುಗಳಿಗೆ ಒಪ್ಪಿಕೊಳ್ಳಿ",
+    "AGREE_TERMS_ERROR": "ಸಲ್ಲಿಸುವ ಮೊದಲು ನೀವು ಒಪ್ಪಿಕೊಳ್ಳಬೇಕು.",
+    "SUBMIT_FORM": "ಫಾರ್ಮ್ ಸಲ್ಲಿಸಿ",
+    "SUCCESS": {
+      "TITLE": "ನಿಮ್ಮ ಭೂಮಿ ಯಶಸ್ವಿಯಾಗಿ ನೋಂದಾಯಿಸಲಾಗಿದೆ",
+      "MESSAGE": "ನಿಮ್ಮ ಭೂಮಿ ಯಶಸ್ವಿಯಾಗಿ ನೋಂದಾಯಿಸಲಾಗಿದೆ. ನಮ್ಮ ಸೇವೆಯನ್ನು ಬಳಸಿದಕ್ಕಾಗಿ ಧನ್ಯವಾದಗಳು!",
+      "BUTTON": "ಮುಖಪುಟಕ್ಕೆ ಹೋಗಿ"
+    },
+    "FACTORY": {
+      "TITLE": "ಕಾರ್ಖಾನೆ",
+      "CAPACITY": "ದಿನಕ್ಕೆ ಕ್ರಷಿಂಗ್ ಸಾಮರ್ಥ್ಯ",
+      "UNIT": "ಟನ್‌ಗಳು",
+      "STATUS": "ಚಾಲನೆಯ ಸ್ಥಿತಿ",
+      "BUTTON": "ವಿವರಗಳು",
+      "SHUTDOWN": "ನಿಲ್ಲಿಸಲಾಗಿದೆ",
+      "ACTIVE": "ಸಕ್ರಿಯ",
+      "NAME1": "ಶ್ರೀ ಚಾಮುಂಡೇಶ್ವರಿ ಶುಗರ್ಸ್ ಲಿಮಿಟೆಡ್, ಕೆಎಂ ದೊಡ್ಡಿ, ಮಂಡ್ಯ, ಕರ್ನಾಟಕ",
+      "NAME2": "ಪಾಂಡವಪುರ ಸಹಕಾರ ಸಕ್ಕರೆ ಕಾರ್ಖಾನೆ ಲಿಮಿಟೆಡ್ (PSSK), ಪಾಂಡವಪುರ, ಮಂಡ್ಯ, ಕರ್ನಾಟಕ",
+      "NAME3": "ಮೈಸೂರು ಶುಗರ್ ಕಂಪನಿ ಲಿಮಿಟೆಡ್, ಮಂಡ್ಯ, ಕರ್ನಾಟಕ"
+    },
     "REGISTERED": {
       "TITLE": "ನೋಂದಾಯಿತ ಡೇಟಾ:",
       "SHUTDOWN_WARNING": "ಆಯ್ದ ಕಾರ್ಖಾನೆ ಪ್ರಸ್ತುತ ನಿಲ್ಲಿಸಲಾಗಿದೆ. ದಯವಿಟ್ಟು ಯಾವುದೇ ಐಟಂಗಳನ್ನು ನಿಯೋಜಿಸಬೇಡಿ.",
@@ -65,5 +66,20 @@
       "ADD_FACTORY1": "ಕಾರ್ಖಾನೆ 1 ಗೆ ಸೇರಿಸಿ",
       "ADD_FACTORY2": "ಕಾರ್ಖಾನೆ 2 ಗೆ ಸೇರಿಸಿ",
       "ADD_FACTORY3": "ಕಾರ್ಖಾನೆ 3 ಗೆ ಸೇರಿಸಿ"
+    },
+    "PAYMENT": {
+      "ENTER_PAYMENT_DETAILS": "ಪಾವತಿ ವಿವರಗಳನ್ನು ನಮೂದಿಸಿ",
+      "ACCOUNT_HOLDER": "ಖಾತೆಧಾರಿಯ ಹೆಸರು",
+      "ACCOUNT_NUMBER": "ಖಾತೆ ಸಂಖ್ಯೆ",
+      "BANK_NAME": "ಬ್ಯಾಂಕ್ ಹೆಸರು",
+      "BRANCH_NAME": "ಶಾಖೆ ಹೆಸರು",
+      "IFSC_CODE": "IFSC ಕೋಡ್",
+      "MOBILE_NUMBER": "ಮೊಬೈಲ್ ಸಂಖ್ಯೆ",
+      "SUBMIT_AND_PAY": "ಸಲ್ಲಿಸಿ & ಪಾವತಿಸಿ",
+      "BANK_SUBMIT_SUCCESS": "ಬ್ಯಾಂಕ್ ವಿವರಗಳು ಯಶಸ್ವಿಯಾಗಿ ಸಲ್ಲಿಸಲಾಗಿದೆ!",
+      "BANK_SUBMIT_ERROR": "ದಯವಿಟ್ಟು ಎಲ್ಲ ಅಗತ್ಯ ಕ್ಷೇತ್ರಗಳನ್ನು ಸರಿಯಾಗಿ ಭರ್ತಿ ಮಾಡಿ!",
+      "PAYMENT_DESCRIPTION": "ಸೇವೆಗಳಿಗಾಗಿ ಪಾವತಿ",
+      "PAYMENT_SUCCESS": "ಪಾವತಿ ಯಶಸ್ವಿ! ವ್ಯವಹಾರ ID: "
     }
+  }
 }
