--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -67,4 +67,16 @@
       "ADD_FACTORY2": "Add to Factory 2",
       "ADD_FACTORY3": "Add to Factory 3"
     }
+  "ENTER_PAYMENT_DETAILS": "Enter Payment Details",
+  "ACCOUNT_HOLDER": "Account Holder Name",
+  "ACCOUNT_NUMBER": "Account Number",
+  "BANK_NAME": "Bank Name",
+  "BRANCH_NAME": "Branch Name",
+  "IFSC_CODE": "IFSC Code",
+  "MOBILE_NUMBER": "Mobile Number",
+  "SUBMIT_AND_PAY": "Submit & Pay",
+  "BANK_SUBMIT_SUCCESS": "Bank details submitted successfully!",
+  "BANK_SUBMIT_ERROR": "Please fill out all required fields correctly!",
+  "PAYMENT_DESCRIPTION": "Payment for services",
+  "PAYMENT_SUCCESS": "Payment successful! Transaction ID: "
 }
